# go2-lidar-obstacle-detector

./: .gitignore  README.md  __init__.py  lidar_detector.launch.py  lidar_detector.py  package.xml  requirements.txt  setup.cfg  setup.py  test_classifier.py
config/: detector_params.yaml
